--- a/01.Tools/TheMuffinStore/index.html
+++ b/01.Tools/TheMuffinStore/index.html
@@ -7,6 +7,43 @@
     <title>The Muffin Store</title>
 </head>
 <body>
-    <h1>The Muffin Store</h1>
+    <h1><a href="#">The Muffin Store</a>></h1>
+    <ul>    
+<li><a href="#">Home</a></li>
+<li><a href="#">Our Muffins</a></li>
+<li><a href="#">Contact</a></li>
+    </ul>
+    <img src="img/banner.jpeg" alt="">
+    <p>
+        Did shy say mention enabled through alderly improve. As at so 
+        believe account evening behaved hearted is. House is tlted we 
+        aware. It ye greatest removing concerns an overcame appetite. 
+        Manner result squarefather boy behind his.
+    </p>
+    <blockquote> 
+        delicious handcrafted muffins filled with love!
+    </blockquote>
+
+    <h3>Pink rose</h3>
+    <figure>
+<img src="muffin1.jpeg" alt="">
+<figcaption>lovely strawberry flavored muffin</figcaption>
+    </figure>
+    <p> <a href="">add to basket</a></p>
+
+    <h3>Delicious dark</h3>
+    <figure>
+<img src="img/muffin2.jpeg" alt="">
+<figcaption>full dark chocolate taste</figcaption>
+    </figure>
+    <p> <a href="">add to basket</a></p>
+
+    <h3>Christmas special</h3>
+    <figure>
+<img scr="img/muffin3.jpeg" alt="">
+<figcaption>colorful blue with a touch of blueberries</figcaption>
+    </figure>
+    <p> <a href="">add to basket</a></p>
+
 </body>
 </html>
