--- a/01.Tools/TheMuffinStore/index.html
+++ b/01.Tools/TheMuffinStore/index.html
@@ -15,10 +15,14 @@
     </ul>
     <img src="img/banner.jpeg" alt="">
     <p>
-        Did shy say mention enabled through alderly improve. As at so 
-        believe account evening behaved hearted is. House is tlted we 
-        aware. It ye greatest removing concerns an overcame appetite. 
-        Manner result squarefather boy behind his.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Obcaecati asperiores facere cumque enim quaerat voluptatibus, minus laudantium aspernatur. 
+        Ratione corporis eveniet reprehenderit atque cumque temporibus quibusdam soluta eum ea facilis ipsam sequi qui impedit, 
+        eligendi incidunt quos dolore voluptate! Id quod saepe dicta deserunt incidunt sequi optio, laboriosam sed. 
+        Esse tempore debitis quo veniam minus doloremque dignissimos eos assumenda rerum adipisci animi hic voluptatibus 
+        iste consectetur magnam, obcaecati recusandae eligendi aperiam ut eaque omnis qui. 
+        Eaque iure eveniet quo amet id vero saepe nobis mollitia nisi qui necessitatibus expedita rem quod autem quam perferendis, 
+        sit nam unde rerum? Tenetur, neque.
     </p>
     <blockquote> 
         delicious handcrafted muffins filled with love!
