--- a/01.Tools/TheMuffinStore/index.html
+++ b/01.Tools/TheMuffinStore/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Muffin Store</title>
 </head>
+
 <body>
-    <h1><a href="#">The Muffin Store</a>></h1>
-    <ul>    
-<li><a href="#">Home</a></li>
-<li><a href="#">Our Muffins</a></li>
-<li><a href="#">Contact</a></li>
+    <h1><a href="#">The Muffin Store</a></h1>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Our Muffins</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
     <img src="img/banner.jpeg" alt="">
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Obcaecati asperiores facere cumque enim quaerat voluptatibus, minus laudantium aspernatur. 
-        Ratione corporis eveniet reprehenderit atque cumque temporibus quibusdam soluta eum ea facilis ipsam sequi qui impedit, 
-        eligendi incidunt quos dolore voluptate! Id quod saepe dicta deserunt incidunt sequi optio, laboriosam sed. 
-        Esse tempore debitis quo veniam minus doloremque dignissimos eos assumenda rerum adipisci animi hic voluptatibus 
-        iste consectetur magnam, obcaecati recusandae eligendi aperiam ut eaque omnis qui. 
-        Eaque iure eveniet quo amet id vero saepe nobis mollitia nisi qui necessitatibus expedita rem quod autem quam perferendis, 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Obcaecati asperiores facere cumque enim quaerat voluptatibus, minus laudantium aspernatur.
+        Ratione corporis eveniet reprehenderit atque cumque temporibus quibusdam soluta eum ea facilis ipsam sequi qui
+        impedit,
+        eligendi incidunt quos dolore voluptate! Id quod saepe dicta deserunt incidunt sequi optio, laboriosam sed.
+        Esse tempore debitis quo veniam minus doloremque dignissimos eos assumenda rerum adipisci animi hic voluptatibus
+        iste consectetur magnam, obcaecati recusandae eligendi aperiam ut eaque omnis qui.
+        Eaque iure eveniet quo amet id vero saepe nobis mollitia nisi qui necessitatibus expedita rem quod autem quam
+        perferendis,
         sit nam unde rerum? Tenetur, neque.
     </p>
-    <blockquote> 
+    <blockquote>
         delicious handcrafted muffins filled with love!
     </blockquote>
 
     <h3>Pink rose</h3>
     <figure>
-<img src="muffin1.jpeg" alt="">
-<figcaption>lovely strawberry flavored muffin</figcaption>
+        <img src="img/muffin1.jpeg" alt="">
+        <figcaption>lovely strawberry flavored muffin</figcaption>
     </figure>
-    <p> <a href="">add to basket</a></p>
+    <p>&#128722;<a href="">add to basket</a></p>
 
     <h3>Delicious dark</h3>
     <figure>
-<img src="img/muffin2.jpeg" alt="">
-<figcaption>full dark chocolate taste</figcaption>
+        <img src="img/muffin2.jpeg" alt="">
+        <figcaption>full dark chocolate taste</figcaption>
     </figure>
-    <p> <a href="">add to basket</a></p>
+    <p>&#128722;<a href="">add to basket</a></p>
 
     <h3>Christmas special</h3>
     <figure>
-<img scr="img/muffin3.jpeg" alt="">
-<figcaption>colorful blue with a touch of blueberries</figcaption>
+        <img src="img/muffin3.jpeg" alt="">
+        <figcaption>colorful blue with a touch of blueberries</figcaption>
     </figure>
-    <p> <a href="">add to basket</a></p>
+    <p>&#128722;<a href="">add to basket</a></p>
 
 </body>
+
 </html>
