--- a/02.HTMLBasis/MijnEerstePagina/img/index.html
+++ b/02.HTMLBasis/MijnEerstePagina/img/index.html
@@ -12,7 +12,7 @@
     <h1>Walid El Bahoudi</h1>
     <h2>Mijn eerste pagina</h2>
 
-    <img src="" width="" height="" alt="Photo">
+    <img src="image0.jpeg" width="300" height="350" alt="Photo">
     <p>
         Unpleasant nor diminution excellence apartments imprudence the met new. Draw part them he an to he roof only.
         Music leave say doors him. Tore bred form if sigh case as do. Staying he no looking if do opinion. Sentiments
