--- a/02.HTMLBasis/FunMetIconen/index.html
+++ b/02.HTMLBasis/FunMetIconen/index.html
@@ -6,6 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Met Iconen</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settings:
+                'FILL' 0,
+                'wght' 400,
+                'GRAD' 0,
+                'opsz' 48
+        }
+    </style>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settings:
+                'FILL' 0,
+                'wght' 400,
+                'GRAD' 0,
+                'opsz' 48
+        }
+    </style>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settings:
+                'FILL' 0,
+                'wght' 400,
+                'GRAD' 0,
+                'opsz' 48
+        }
+    </style>
 </head>
 
 <body>
@@ -17,15 +50,21 @@
     </ul>
     <h2>Versie met UTF-8</h2>
     <ul>
-        <li>piano spelen </li>
-        <li>mama bellen</li>
-        <li>dobbelen</li>
+        <li>piano spelen &#119070; </li>
+        <li>mama bellen &#9743; </li>
+        <li>dobbelen &#9860;</li>
     </ul>
     <h2>Versie met Material icons</h2>
     <ul>
-        <li>piano spelen </li>
-        <li>mama bellen </li>
-        <li>dobbelen </li>
+        <li>piano spelen <span class="material-symbols-outlined">
+                piano
+            </span> </li>
+        <li>mama bellen <span class="material-symbols-outlined">
+                phone_in_talk_watchface_indicator
+            </span> </li>
+        <li>dobbelen <span class="material-symbols-outlined">
+                casino
+            </span></li>
     </ul>
 
 
