--- a/02.HTMLBasis/FunMetIconen/index.html
+++ b/02.HTMLBasis/FunMetIconen/index.html
@@ -56,15 +56,9 @@
     </ul>
     <h3>Versie met Material icons</h3>
     <ul>
-        <li>piano spelen <span class="material-symbols-outlined">
-                piano
-            </span> </li>
-        <li>mama bellen <span class="material-symbols-outlined">
-                phone_in_talk_watchface_indicator
-            </span> </li>
-        <li>dobbelen <span class="material-symbols-outlined">
-                casino
-            </span></li>
+        <li>piano spelen <span class="material-symbols-outlined">piano</span> </li>
+        <li>mama bellen <span class="material-symbols-outlined">phone_in_talk_watchface_indicator</span> </li>
+        <li>dobbelen <span class="material-symbols-outlined">casino</span></li>
     </ul>
 
 
