--- a/02.HTMLBasis/FilmsVanDeWeek/index.html
+++ b/02.HTMLBasis/FilmsVanDeWeek/index.html
@@ -30,8 +30,8 @@
                 <td><img src="img/wijzer_12.png" alt="wijzer_12"></td>
                 <td>Dune</td>
                 <td colspan="2">20u00</td>
-                <td>19h30</td>
-                <td>16h30</td>
+                <td>19u30</td>
+                <td>16u30</td>
                 <td colspan="2">20u00</td>
                 <td></td>
             </tr>
@@ -41,7 +41,7 @@
                 <td><img src="img/wijzer_6.png" alt="wijzer_6"></td>
                 <td>The Magic Gate</td>
                 <td colspan="3"></td>
-                <td>14h00</td>
+                <td>14u00</td>
                 <td colspan="3"></td>
             </tr>
         </tbody>
@@ -50,8 +50,8 @@
                 <td><img src="img/wijzer_12.png" alt="wijzer_12"></td>
                 <td>Rookie</td>
                 <td colspan="2"></td>
-                <td>19h00</td>
-                <td>18h00</td>
+                <td>19u00</td>
+                <td>18u00</td>
                 <td colspan="3"></td>
             </tr>
         </tbody>
@@ -60,9 +60,9 @@
                 <td><img src="img/wijzer_14.png" alt="wijzer_14"></td>
                 <td>After We Fell</td>
                 <td></td>
-                <td>20h00</td>
-                <td>14h00</td>
-                <td>16h00</td>
+                <td>20u00</td>
+                <td>14u00</td>
+                <td>16u00</td>
                 <td colspan="3"></td>
             </tr>
         </tbody>
@@ -71,7 +71,7 @@
                 <td><img src="img/wijzer_al.png" alt="wijzer_al"></td>
                 <td>Paw Patrol</td>
                 <td colspan="3"></td>
-                <td>14h00</td>
+                <td>14u00</td>
                 <td colspan="3"></td>
             </tr>
         </tbody>
@@ -80,7 +80,7 @@
                 <td><img src="img/wijzer_16.png" alt="wijzer_16"></td>
                 <td>Benedetta</td>
                 <td colspan="4"></td>
-                <td colspan="3">20h00</td>
+                <td colspan="3">20u00</td>
             </tr>
         </tbody>
         <tbody>
@@ -88,7 +88,7 @@
                 <td><img src="img/wijzer_al.png" alt="wijzer_al"></td>
                 <td>Supernova</td>
                 <td colspan="6"></td>
-                <td>20h00</td>
+                <td>20u00</td>
             </tr>
         </tbody>
     </table>
