Update bakkerij & toy 2

--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -82,7 +82,52 @@
         an part need. At wrong of of water those linen. Needed oppose seemed how all. Very mrs shed shew gave you.
     </p>
     <h3>WATCH US ON YOUTUBE</h3>
-    
+    <p>
+        We hav a Youtube channel!
+    </p>
+    <h3>OUR EVENTS</h3>
+    <p>
+        27 APR
+    <h4>Country suffer twenty</h4>
+    "logo" Kirchenpingarten, Germany
+
+    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
+    be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
+    been sent hard hill.
+    <a href="">more >></a>
+
+    29 APR
+    <h4>Country suffer twenty</h4>
+    "logo" Gignac-la-Nerthe, France
+
+    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
+    be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
+    been sent hard hill.
+    <a href="">more >></a>
+
+    5 MAY
+    <h4>Country suffer twenty</h4>
+    "logo" Gignac-la-Nerthe, France
+
+    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
+    be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
+    been sent hard hill.
+    <a href="">more >></a>
+    </p>
+    <p>
+        <small>OTS c@ 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+        <ul>
+            <li><a href="mail">maillogo </a></li>
+            <li><a href="wifi?">logowifi?</a></li>
+            <li><a href="twitter">logotwitter</a></li>
+        </ul>
+        
+    </p>
+
+
 
 </body>
 
