--- a/03.HTMLMedia/BakkerijDhondt/index.html
+++ b/03.HTMLMedia/BakkerijDhondt/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,7 @@
         Voorzorg lot upasboom het onnoodig wel. Zit perak gif leven wonde toe lange spijt. Wording heb doelang pagoden
         honderd des dit.
     </p>
-    <h1>Onze Partners</h1>
+    <h2>Onze Partners</h2>
     <ul>
         <li><img src="img/groentenFruit.png" alt="groentenFruit"></li>
         <li><img src="img/provincie.png" alt="provincie"></li>
