--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -16,7 +16,7 @@
         <li><a href="">PROJECTS</a></li>
         <li><a href="">CONTACT</a></li>
     </ul>
-    <img src="" alt="">
+    <img src="img/slider-1.jpg" alt="slider-1">
     <h1>WHAT WE DO</h1>
     <h3>RESTORATION</h3>
     <p>
@@ -68,7 +68,9 @@
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-    </p>
+
+    <br>
+
     <h1>ABOUT US</h1>
     <h3>OUR WORK</h3>
     <a href=""></a>
@@ -116,6 +118,8 @@
     be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
     been sent hard hill.
     <a href="">more >></a>
+    
+    <br>
     </p>
     <p>
         <small>OTS c@ 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
