--- a/03.HTMLMedia/BakkerijDhondt/index.html
+++ b/03.HTMLMedia/BakkerijDhondt/index.html
@@ -15,15 +15,15 @@
         <li><a href="">info@bakkerijdhont.be</a></li>
     </ul>
     <ul>
-        <li><a href="">Meld aan</a></li>
-        <li><a href="">Login</a></li>
+        <li><a href="#">Meld aan</a></li>
+        <li><a href="#">Login</a></li>
     </ul>
     <h1>Bakkerij D'Hondt</h1>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Assortiment</a></li>
-        <li><a href="">Lokale vrienden</a></li>
-        <li><a href="">Algemene info</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Assortiment</a></li>
+        <li><a href="#">Lokale vrienden</a></li>
+        <li><a href="#">Algemene info</a></li>
     </ul>
     <p>
         De Wakkere Bakker Zegt
@@ -36,8 +36,8 @@
         versteend nu. Uithoudt oog die doodende staatjes het verschil. Opzicht nu fortuin nu menigte. Hen verwoede
         voorraad grootste ton elastica laatsten wij uit. Wat den aanleiding concurrent dat uitstekend are.
         <br>
-        <a href="">Lees meer</a>
     </p>
+    <p><a href="">Lees meer</a></p>
    
     <img src="img/overDeBakkerij.jpg" alt="overDeBakkerij">
     <h2>Laatste nieuwtjes</h2>
@@ -86,12 +86,12 @@
     </p>
     <h2>Volg Ons</h2>
     <ul>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Google Plus</a></li>
-        <li><a href="">LinkedIn</a></li>
-        <li><a href="">Youtube</a></li>
-        <li><a href="">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Google Plus</a></li>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Instagram</a></li>
     </ul>
     <p>
         <small>Copyright ©2018 Evert Dhont. Alle rechten. | Theme made by Evert Dhont and based on "Academic" theme
