--- a/03.HTMLMedia/ToyBench1/contact.html
+++ b/03.HTMLMedia/ToyBench1/contact.html
@@ -12,9 +12,9 @@
     <h1>Ol' Toy Bench</h1>
     <h2>A SECOND LIFE FOR TIMELESS TOYS</h2>
     <ul>
-        <li><a href="">HOME</a></li>
-        <li><a href="">PROJECTS</a></li>
-        <li><a href="">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="project.html">PROJECTS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <h1>CONTACT US</h1>
     <p>
@@ -23,27 +23,23 @@
         <br>
         1224 Park Pi, Brooklyn, NY 11213
     </Address>
-    "Phonelogo" Phone:
-    <br>
-    +1 800 5596580
-    <br>
-    "maillogo" E-mail:
-    <br>
+    "Phonelogo" Phone:<br>
+    +1 800 5596580<br>
+    "maillogo" E-mail:<br>
     mail@demolink.org
     </p>
 
     <p>
         "Hoe doe ik maps ??"
     </p>
-
+////
     <p>
-        <small>OTS c@ 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
     <ul>
         <li><a href="mail">maillogo </a></li>
         <li><a href="wifi?">logowifi?</a></li>
         <li><a href="twitter">logotwitter</a></li>
     </ul>
-
     </p>
 
 </body>
