--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -123,7 +123,7 @@
     </p>
     
     <p>
-        <small>OTS c@ 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
         <ul>
             <li><a href="mail">maillogo </a></li>
             <li><a href="wifi?">logowifi?</a></li>
