--- a/03.HTMLMedia/ToyBench1/project.html
+++ b/03.HTMLMedia/ToyBench1/project.html
@@ -12,9 +12,9 @@
     <h1>Ol' Toy Bench</h1>
     <h2>A SECOND LIFE FOR TIMELESS TOYS</h2>
     <ul>
-        <li><a href="">HOME</a></li>
-        <li><a href="">PROJECTS</a></li>
-        <li><a href="">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="project.html">PROJECTS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <h1>PROJECTS</h1>
     <p>
@@ -116,7 +116,7 @@
     </p>
 
     <p>
-        <small>OTS c@ 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
     <ul>
         <li><a href="mail">maillogo </a></li>
         <li><a href="wifi?">logowifi?</a></li>
