--- a/03.HTMLMedia/ToyBench1/contact.html
+++ b/03.HTMLMedia/ToyBench1/contact.html
@@ -26,13 +26,14 @@
     "Phonelogo" Phone:<br>
     +1 800 5596580<br>
     "maillogo" E-mail:<br>
-    mail@demolink.org
+    <a href="mailto:mail@demolink.org"></a>
     </p>
 
-    <p>
-        "Hoe doe ik maps ??"
-    </p>
-////
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193747.6573477421!2d-74.08508212082744!3d40.6451593628039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sbe!4v1665247726243!5m2!1sfr!2sbe"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
     <ul>
