--- a/03.HTMLMedia/ToyBench1/project.html
+++ b/03.HTMLMedia/ToyBench1/project.html
@@ -10,13 +10,13 @@
 
 <body>
     <h1>Ol' Toy Bench</h1>
-    <h2>A SECOND LIFE FOR TIMELESS TOYS</h2>
+    <p> A SECOND LIFE FOR TIMELESS TOYS</p>
     <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="project.html">PROJECTS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
-    <h1>PROJECTS</h1>
+    <h2>PROJECTS</h2>
     <p>
         <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
@@ -110,20 +110,22 @@
     <h3>SPINNER</h3>
     Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
     To up remark it eldest lenght oh passed.
+    </p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-    </p>
+
 
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+    </p>
     <ul>
         <li><a href="mail">maillogo </a></li>
         <li><a href="wifi?">logowifi?</a></li>
         <li><a href="twitter">logotwitter</a></li>
     </ul>
 
-    </p>
+
 
 
 </body>
