--- a/03.HTMLMedia/ToyBench1/contact.html
+++ b/03.HTMLMedia/ToyBench1/contact.html
@@ -10,14 +10,14 @@
 
 <body>
     <h1>Ol' Toy Bench</h1>
-    <h2>A SECOND LIFE FOR TIMELESS TOYS</h2>
+    <p>A SECOND LIFE FOR TIMELESS TOYS</p>
     <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="project.html">PROJECTS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
-    <h1>CONTACT US</h1>
-    <p>
+    <h2>CONTACT US</h2>
+
     <Address>
         "addresslogo" address:
         <br>
@@ -27,7 +27,7 @@
     +1 800 5596580<br>
     "maillogo" E-mail:<br>
     <a href="mailto:mail@demolink.org"></a>
-    </p>
+
 
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193747.6573477421!2d-74.08508212082744!3d40.6451593628039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sbe!4v1665247726243!5m2!1sfr!2sbe"
@@ -36,11 +36,7 @@
 
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
-    <ul>
-        <li><a href="mail">maillogo </a></li>
-        <li><a href="wifi?">logowifi?</a></li>
-        <li><a href="twitter">logotwitter</a></li>
-    </ul>
+        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
     </p>
 
 </body>
