--- a/03.HTMLMedia/ToyBench1/project.html
+++ b/03.HTMLMedia/ToyBench1/project.html
@@ -17,100 +17,100 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <h2>PROJECTS</h2>
-    <p>
+    
         <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p> 
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p> 
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
-    </p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
+    To up remark it eldest lenght oh passed.</p> 
+    
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
@@ -118,12 +118,8 @@
 
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
     </p>
-    <ul>
-        <li><a href="mail">maillogo </a></li>
-        <li><a href="wifi?">logowifi?</a></li>
-        <li><a href="twitter">logotwitter</a></li>
-    </ul>
 
 
 
