--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <h1>Ol' Toy Bench</h1>
-    <h2>A SECOND LIFE FOR TIMELESS TOYS</h2>
+    <p>A SECOND LIFE FOR TIMELESS TOYS</p>
     <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="project.html">PROJECTS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <img src="img/slider-1.jpg" alt="slider-1">
-    <h1>WHAT WE DO</h1>
+    <h2>WHAT WE DO</h2>
     <h3>RESTORATION</h3>
     <p>
         Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
@@ -38,30 +38,30 @@
         Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
         eldest former be if.
     </p>
-    <h1>RECENT PROJECTS</h1>
+    <h2>RECENT PROJECTS</h2>
     <p>
-        <a href=""></a>
+        <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
     Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
     To up remark it eldest lenght oh passed.
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-    <a href=""></a>
+    <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
     Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
     To up remark it eldest lenght oh passed.
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-    <a href=""></a>
+    <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
     Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
     To up remark it eldest lenght oh passed.
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-    <a href=""></a>
+    <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
     Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
     To up remark it eldest lenght oh passed.
@@ -71,7 +71,7 @@
 
     <br>
 
-    <h1>ABOUT US</h1>
+    <h2>ABOUT US</h2>
     <h3>OUR WORK</h3>
     <a href=""></a>
     <p>
@@ -128,12 +128,7 @@
 
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
-    <ul>
-        <li><a href="mail">maillogo </a></li>
-        <li><a href="wifi?">logowifi?</a></li>
-        <li><a href="twitter">logotwitter</a></li>
-    </ul>
-
+        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
     </p>
 
 
