--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -92,40 +92,36 @@
             allowfullscreen></iframe>
     </p>
     <h3>OUR EVENTS</h3>
-    <p>
+    
         27 APR
     <h4>Country suffer twenty</h4>
     "logo" Kirchenpingarten, Germany
 
-    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
     cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
     be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
-    been sent hard hill.
+    been sent hard hill. </p>
     <a href="">more >></a>
 
     29 APR
     <h4>Country suffer twenty</h4>
     "logo" Gignac-la-Nerthe, France
 
-    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
     cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
     be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
-    been sent hard hill.
+    been sent hard hill.</p> 
     <a href="">more >></a>
 
     5 MAY
     <h4>Country suffer twenty</h4>
     "logo" Gignac-la-Nerthe, France
 
-    Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
+    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
     cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited elderly
     be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no less
-    been sent hard hill.
+    been sent hard hill. </p> 
     <a href="">more >></a>
-
-    <br>
-    </p>
-
     <p>
         <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
         <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
