--- a/03.HTMLMedia/CvNatalyaNovak/index.html
+++ b/03.HTMLMedia/CvNatalyaNovak/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="NL">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CvNatalyaNovak</title>
 </head>
 
 <body>
@@ -78,12 +78,13 @@
     <h2>Contacteer mij!</h2>
     <address>
         tel <a href="tel:0032 123 54 76 98">Telefoon nummer</a><br>
-        email <a href="irina@novak.ru">email</a><br>
+        email <a href="mailto:irina@novak.ru">email</a><br>
+        
         adres Mosterdstraat 117 <br>
         2100 Antwerpen (België) <br>
     </address>
     <p>
-        <a href="ga naar contact pagina →"></a>
+        <a href="#">ga naar contact pagina →</a>
         <small>©2018, Natalya Novak</small>
     </p>
 
