--- a/03.HTMLMedia/ToyBench1/contact.html
+++ b/03.HTMLMedia/ToyBench1/contact.html
@@ -18,14 +18,16 @@
     </ul>
     <h2>CONTACT US</h2>
 
-    <Address>
+    <address>
         "addresslogo" address:
-        <br>
         1224 Park Pi, Brooklyn, NY 11213
-    </Address>
-    "Phonelogo" Phone:<br>
-    +1 800 5596580<br>
-    "maillogo" E-mail:<br>
+    </address>
+
+    <p>
+        "Phonelogo" Phone:
+        +1 800 5596580
+        "maillogo" E-mail:
+    </p>
     <a href="mailto:mail@demolink.org"></a>
 
 
