--- a/03.HTMLMedia/ToyBench1/index.html
+++ b/03.HTMLMedia/ToyBench1/index.html
@@ -41,9 +41,13 @@
     <h2>RECENT PROJECTS</h2>
     <p>
         <img src="img/fire-truck.jpg" alt="">
+    </p>
     <h3>FIRE TRUCK</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>
+        Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.
+    </p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
@@ -56,20 +60,23 @@
     </ul>
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>
+        Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.
+    </p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.
+    </p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
-
-    <br>
 
     <h2>ABOUT US</h2>
     <h3>OUR WORK</h3>
@@ -85,7 +92,7 @@
     </p>
     <h3>WATCH US ON YOUTUBE</h3>
     <p>
-        We hav a Youtube channel! <br>
+        We hav a Youtube channel!
         <iframe width="560" height="315" src="https://www.youtube.com/embed/iA_Dty-sZ7s" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
