--- a/03.HTMLMedia/ToyBench1/project.html
+++ b/03.HTMLMedia/ToyBench1/project.html
@@ -17,100 +17,112 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <h2>PROJECTS</h2>
-    
-        <img src="img/fire-truck.jpg" alt="">
+
+    <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/fire-truck.jpg" alt="">
     <h3>FIRE TRUCK</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p>
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/bicycle-bronze.jpg" alt="">
     <h3>BRONZE BISYCLE</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p> 
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/teddy-luggage.jpg" alt="">
     <h3>TEDDY BEAR</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p> 
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
 
     <img src="img/toy-spinner.jpg" alt="">
     <h3>SPINNER</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.</p> 
-    
+    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
+        rooms.
+        To up remark it eldest lenght oh passed.</p>
+
     <ul>
         <li><a href="">DETAILS</a></li>
     </ul>
