--- a/04.HTMLFormulieren/ToyBench2/contact.html
+++ b/04.HTMLFormulieren/ToyBench2/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToyBench1</title>
+    <title>ToyBench2</title>
 </head>
 
 <body>
@@ -16,9 +16,7 @@
         <li><a href="project.html">PROJECTS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
-    <h2>CONTACT US</h2>
-
-    <form action="#"></form>
+    <form action="#">
     <p>
         <label for="username">Name: *</label>
         <input type="text" id="username" autofocus required placeholder="e.g Jhon Doe">
@@ -35,15 +33,19 @@
         <label for="desc">Message: *</label>
         <textarea id="desc" cols="30" rows="10" required></textarea>
     </p>
-    
-    <Address>
+    </form>
+    <h2>CONTACT US</h2>
+
+    <address>
         "addresslogo" address:
-        <br>
         1224 Park Pi, Brooklyn, NY 11213
-    </Address>
-    "Phonelogo" Phone:<br>
-    +1 800 5596580<br>
-    "maillogo" E-mail:<br>
+    </address>
+
+    <p>
+        "Phonelogo" Phone:
+        +1 800 5596580
+        "maillogo" E-mail:
+    </p>
     <a href="mailto:mail@demolink.org"></a>
 
 
