--- a/04.HTMLFormulieren/ToyBench2/project.html
+++ b/04.HTMLFormulieren/ToyBench2/project.html
@@ -21,7 +21,7 @@
         <p>
             <label for="category"></label>
             <select id="category">
-                <option disabled value="-1">category... </option>
+                <option value="-1">category... </option>
                 <option value="0">dolls</option>
                 <option value="1">cars</option>
                 <option value="2">games</option>
