--- a/04.HTMLFormulieren/ToyBench2/contact.html
+++ b/04.HTMLFormulieren/ToyBench2/contact.html
@@ -17,22 +17,26 @@
         <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <form action="#">
-    <p>
-        <label for="username">Name: *</label>
-        <input type="text" id="username" autofocus required placeholder="e.g Jhon Doe">
-    </p>
-    <p>
-        <label for="email">Email: *</label>
-        <input type="email" id="email" required placeholder="e.g johndoe@sky.net">
-    </p>
-    <p>
-        <label for="mobile">Phone: *</label>
-        <input type="tel" id="mobile" required placeholder="e.g. +32 489 44 33 22">
-    </p>
-    <p>
-        <label for="desc">Message: *</label>
-        <textarea id="desc" cols="30" rows="10" required></textarea>
-    </p>
+        <p>
+            <label for="username">Name: *</label>
+            <input type="text" id="username" autofocus required placeholder="e.g Jhon Doe">
+        </p>
+        <p>
+            <label for="email">Email: *</label>
+            <input type="email" id="email" required placeholder="e.g johndoe@sky.net">
+        </p>
+        <p>
+            <label for="mobile">Phone: *</label>
+            <input type="tel" id="mobile" required placeholder="e.g. +32 489 44 33 22">
+        </p>
+        <p>
+            <label for="desc">Message: *</label>
+            <textarea id="desc" cols="30" rows="10" required></textarea>
+        </p>
+        <p>
+            <label for="submit">submit</label>
+            <input type="submit" value="submit">
+        </p>
     </form>
     <h2>CONTACT US</h2>
 
