--- a/05.HTMLStructureren/ToyBench3/contact.html
+++ b/05.HTMLStructureren/ToyBench3/contact.html
@@ -11,11 +11,13 @@
 <body>
     <h1>Ol' Toy Bench</h1>
     <p>A SECOND LIFE FOR TIMELESS TOYS</p>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="project.html">PROJECTS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
     <form action="#">
         <p>
             <label for="username">Name: *</label>
