--- a/05.HTMLStructureren/ToyBench3/index.html
+++ b/05.HTMLStructureren/ToyBench3/index.html
@@ -11,11 +11,13 @@
 <body>
     <h1>Ol' Toy Bench</h1>
     <p>A SECOND LIFE FOR TIMELESS TOYS</p>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="project.html">PROJECTS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
     <img src="img/slider-1.jpg" alt="slider-1">
     <h2>WHAT WE DO</h2>
     <h3>RESTORATION</h3>
@@ -110,7 +112,7 @@
         be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no
         less
         been sent hard hill. </p>
-    <a href="">more >></a>
+    <a href="">more &gt;&gt;</a>
 
     29 APR
     <h4>Country suffer twenty</h4>
