--- a/04.HTMLFormulieren/ToyBench2/project.html
+++ b/04.HTMLFormulieren/ToyBench2/project.html
@@ -19,7 +19,7 @@
     <form action="#">
         <p>filters</p>
         <p>
-            <label for="category"></label>
+            <label for="category">category</label>
             <select id="category">
                 <option value="-1">category... </option>
                 <option value="0">dolls</option>
