--- a/05.HTMLStructureren/ToyBench3/index.html
+++ b/05.HTMLStructureren/ToyBench3/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <h1>Ol' Toy Bench</h1>
-    <p>A SECOND LIFE FOR TIMELESS TOYS</p>
+    <header>
+        <h1>Ol' Toy Bench</h1>
+        <p>A SECOND LIFE FOR TIMELESS TOYS</p>
+    </header>
+
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -18,129 +21,222 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
-    <img src="img/slider-1.jpg" alt="slider-1">
-    <h2>WHAT WE DO</h2>
-    <h3>RESTORATION</h3>
-    <p>
-        Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
-        eldest former be if.
-    </p>
-    <h3>ASSESMENT</h3>
-    <p>
-        Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
-        eldest former be if.
-    </p>
-    <h3>SALES</h3>
-    <p>
-        Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
-        eldest former be if.
-    </p>
-    <h3>ADVICE</h3>
-    <p>
-        Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by. Little do it
-        eldest former be if.
-    </p>
-    <h2>RECENT PROJECTS</h2>
-    <p>
-        <img src="img/fire-truck.jpg" alt="">
-    </p>
-    <h3>FIRE TRUCK</h3>
-    <p>
-        Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.
-    </p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-    <img src="img/bicycle-bronze.jpg" alt="">
-    <h3>BRONZE BISYCLE</h3>
-    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money rooms.
-    To up remark it eldest lenght oh passed.
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-    <img src="img/teddy-luggage.jpg" alt="">
-    <h3>TEDDY BEAR</h3>
-    <p>
-        Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.
-    </p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
-    <img src="img/toy-spinner.jpg" alt="">
-    <h3>SPINNER</h3>
-    <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match money
-        rooms.
-        To up remark it eldest lenght oh passed.
-    </p>
-    <ul>
-        <li><a href="">DETAILS</a></li>
-    </ul>
+    <main>
+        <img src="img/slider-1.jpg" alt="slider-1">
+        <section>
+            <h2>WHAT WE DO</h2>
+            <section>
+                <h3>RESTORATION</h3>
+                <p>
+                    Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by.
+                    Little
+                    do
+                    it
+                    eldest former be if.
+                </p>
+            </section>
+            <section>
+                <h3>ASSESMENT</h3>
+                <p>
+                    Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by.
+                    Little
+                    do
+                    it
+                    eldest former be if.
+                </p>
+            </section>
+            <section>
+                <h3>SALES</h3>
+                <p>
+                    Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by.
+                    Little
+                    do
+                    it
+                    eldest former be if.
+                </p>
+            </section>
+            <section>
+                <h3>ADVICE</h3>
+                <p>
+                    Supposing excuisite daughters eagerness why repulsive for. Praise turned it lovers be warmly by.
+                    Little
+                    do
+                    it
+                    eldest former be if.
+                </p>
+            </section>
+        </section>
+        <section>
+            <h2>RECENT PROJECTS</h2>
+            <section>
+                <p>
+                    <img src="img/fire-truck.jpg" alt="">
+                </p>
+                <h3>FIRE TRUCK</h3>
+                <p>
+                    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy
+                    match
+                    money
+                    rooms.
+                    To up remark it eldest lenght oh passed.
+                </p>
+                <ul>
+                    <li><a href="">DETAILS</a></li>
+                </ul>
+            </section>
+            <section>
+                <img src="img/bicycle-bronze.jpg" alt="">
+                <h3>BRONZE BISYCLE</h3>
+                Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy match
+                money
+                rooms.
+                To up remark it eldest lenght oh passed.
+                <ul>
+                    <li><a href="">DETAILS</a></li>
+                </ul>
+            </section>
+            <section>
+                <img src="img/teddy-luggage.jpg" alt="">
+                <h3>TEDDY BEAR</h3>
+                <p>
+                    Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy
+                    match
+                    money
+                    rooms.
+                    To up remark it eldest lenght oh passed.
+                </p>
+                <ul>
+                    <li><a href="">DETAILS</a></li>
+                </ul>
+            </section>
+            <section>
+                <img src="img/toy-spinner.jpg" alt="">
+                <h3>SPINNER</h3>
+                <p>Much did had call new drew that kept. Limits ecpect wonder law she. Now has you views woman noisy
+                    match
+                    money
+                    rooms.
+                    To up remark it eldest lenght oh passed.
+                </p>
+                <ul>
+                    <li><a href="">DETAILS</a></li>
+                </ul>
+            </section>
+        </section>
+        <section>
+            <h2>ABOUT US</h2>
+            <section>
+                <h3>OUR WORK</h3>
+                <a href=""></a>
+                <p>
+                    Questions explained agreeable preferred strangers too him her son. Set put shyness offices his
+                    females
+                    him
+                    distant. Improve has message besides shy himself cheered however how son. Quick judge other leave
+                    ask
+                    first
+                    chief her. Indeed or remark always silent seemed narrow be. Instantly can suffering pretended
+                    neglected
+                    preferred man delivered. Perhaps fertile brandon do imagine to cordial cottage.
 
-    <h2>ABOUT US</h2>
-    <h3>OUR WORK</h3>
-    <a href=""></a>
-    <p>
-        Questions explained agreeable preferred strangers too him her son. Set put shyness offices his females him
-        distant. Improve has message besides shy himself cheered however how son. Quick judge other leave ask first
-        chief her. Indeed or remark always silent seemed narrow be. Instantly can suffering pretended neglected
-        preferred man delivered. Perhaps fertile brandon do imagine to cordial cottage.
+                    Old unsatiable our now but considered travelling impression. In excuse hardly summer in basket
+                    misery.
+                    By
+                    rent
+                    an part need. At wrong of of water those linen. Needed oppose seemed how all. Very mrs shed shew
+                    gave
+                    you.
+                </p>
+            </section>
+            <section>
+                <h3>WATCH US ON YOUTUBE</h3>
+                <p>
+                    We hav a Youtube channel!
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iA_Dty-sZ7s"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </p>
+            </section>
+            <section>
+                <h3>OUR EVENTS</h3>
+                <section>
+                    27 APR
+                    <h4>Country suffer twenty</h4>
+                    "logo" Kirchenpingarten, Germany
 
-        Old unsatiable our now but considered travelling impression. In excuse hardly summer in basket misery. By rent
-        an part need. At wrong of of water those linen. Needed oppose seemed how all. Very mrs shed shew gave you.
-    </p>
-    <h3>WATCH US ON YOUTUBE</h3>
-    <p>
-        We hav a Youtube channel!
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/iA_Dty-sZ7s" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </p>
-    <h3>OUR EVENTS</h3>
+                    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at
+                        tastes
+                        really
+                        so
+                        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact
+                        demesne
+                        invited
+                        elderly
+                        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable
+                        concerns. By
+                        in
+                        cold
+                        no
+                        less
+                        been sent hard hill. </p>
+                    <a href="">more &gt;&gt;</a>
+                </section>
+                <section>
+                    29 APR
+                    <h4>Country suffer twenty</h4>
+                    "logo" Gignac-la-Nerthe, France
 
-    27 APR
-    <h4>Country suffer twenty</h4>
-    "logo" Kirchenpingarten, Germany
+                    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at
+                        tastes
+                        really
+                        so
+                        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact
+                        demesne
+                        invited
+                        elderly
+                        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable
+                        concerns. By
+                        in
+                        cold
+                        no
+                        less
+                        been sent hard hill.</p>
+                    <a href="">more >></a>
+                </section>
+                <section>
+                    5 MAY
+                    <h4>Country suffer twenty</h4>
+                    "logo" Gignac-la-Nerthe, France
 
-    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
-        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited
-        elderly
-        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no
-        less
-        been sent hard hill. </p>
-    <a href="">more &gt;&gt;</a>
+                    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at
+                        tastes
+                        really
+                        so
+                        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact
+                        demesne
+                        invited
+                        elderly
+                        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable
+                        concerns. By
+                        in
+                        cold
+                        no
+                        less
+                        been sent hard hill. </p>
+                    <a href="">more >></a>
+                </section>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <p>
+            <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
+            <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png"
+                alt="">
+        </p>
+    </footer>
 
-    29 APR
-    <h4>Country suffer twenty</h4>
-    "logo" Gignac-la-Nerthe, France
-
-    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
-        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited
-        elderly
-        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no
-        less
-        been sent hard hill.</p>
-    <a href="">more >></a>
-
-    5 MAY
-    <h4>Country suffer twenty</h4>
-    "logo" Gignac-la-Nerthe, France
-
-    <p>Breakfast agreeable incommode departure it an. By ignorant at on wondered relation. Enough at tastes really so
-        cousin am of. Extensive therefore supported by extremity of contented. Is pursuit compact demesne invited
-        elderly
-        be. View him she roof tell her case has sigh. Moreover is possible he admitted sociable concerns. By in cold no
-        less
-        been sent hard hill. </p>
-    <a href="">more >></a>
-    <p>
-        <small>OTS &copy; 2045 | PRIVACY POLICY | DESIGN BIJ FREETEMPLATES.COM</small>
-        <img src="img/icon-mail.png" alt=""> <img src="img/icon-rss.png" alt=""> <img src="img/icon-twitter.png" alt="">
-    </p>
 
 
 
